Tutorial 3 work upload

--- a/about.html
+++ b/about.html
@@ -3,52 +3,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Kiera Walkerden's Teaching Portfolio - About Me</title>
+    <link rel="stylesheet" href="starter.css">
 </head>
-
 <body>
-  <!-- Page Header with nav links-->
-  <header>
-    <body style="background-color: #FFF9BF; font-family: Georgia;">
-    <h1 style="color:black; font-family: Georgia; text-align: center;">About Me</h1>
+
+<!-- Website title -->
+    <header>
+        <h1 class="site-title">About Me</h1>
+    </header>
+
+<!-- Navigation Menu with different flower spacers between each picture -->
     <nav>
-      <nav style="display: flex; align-items: center; gap: 10px;">
-      <a href="index.html">Home</a>
-<!-- Put different flower image in between each link -->
-      <img src="images/flower1.jpg" alt="Flower image Spacer" width="18px">
-      <a href="about.html">About Me</a>
-      <img src="images/flower2.jpg" alt="Flower image Spacer" width="18px">
-      <a href="teachingphilosophy.html">Teaching Philosophy</a>
-      <img src="images/flower3.jpg" alt="Flower image Spacer" width="18px">
-      <a href="worksamples.html">Unit Plans and Resource Samples</a>
-      <img src="images/flower4.jpg" alt="Flower image Spacer" width="18px">
-      <a href="projects.html">University Projects</a>
+    <div class="container">
+        <img src="images/flower2.png" alt="Flower spacer" class="nav-spacer">
+        <a href="index.html">Home</a>
+        <img src="images/flower3.png" alt="Flower spacer" class="nav-spacer">
+        <a href="about.html" class="active">About Me</a>
+        <img src="images/flower2.png" alt="Flower spacer" class="nav-spacer">
+        <a href="teachingphilosophy.html">Teaching Philosophy</a>
+        <img src="images/flower3.png" alt="Flower spacer" class="nav-spacer">
+        <a href="worksamples.html">Unit Plans and Resource Samples</a>
+        <img src="images/flower2.png" alt="Flower spacer" class="nav-spacer">
+        <a href="projects.html">University Projects</a>
+        <img src="images/flower3.png" alt="Flower spacer" class="nav-spacer">
+        <a href="contact.html">Contact Me</a>
+    </div>
     </nav>
-  </header>
 
- <!-- Main content of this page -->
-  <main style="margin-top: 20px; margin-bottom: 20px; font-family: Georgia;">
+<section>
+      <img src="images/banner1.jpg" alt="Teaching Quote Banner" style="width: 100%; height: auto; max-height: 200px; object-fit: cover;">
+</section>
+
+<!-- Main content -->
+  <main>
+      <section class="profile">
+        <div>
+          <h2>Why teaching? Why now?</h2>
+          <p>My name is Kiera Walkerden, and I am currently studying at university, pursuing a degree in education. I have a strong passion for working with young people and creating inclusive, engaging learning environments that support all students to reach their potential. Through my studies, I've developed an interest in behaviour management, student wellbeing, and designing meaningful, real-world learning experiences.</p>
+          <p>Throughout my university journey, I've gained valuable experience through professional placements in diverse school settings. These placements have helped me apply theory to practice, reflect critically on my teaching, and develop my confidence in the classroom. I'm committed to continuous learning and look forward to making a positive contribution to the education sector.</p>
+        <!-- Add further information here. This is only basic. -->
+        </div>
+        <img src="images/profilepicture.jpg" alt="My Profile Picture">
+      </section>
+    </section>
+
     <section>
-      <img src="images/banner1.jpg" alt="Teaching Quote Banner" style="width: 100%; height: auto;">
-      <h2>Why teaching? Why now?</h2>
-      <p style="font-size: large;"> My name is Kiera Walkerden, and I am currently studying at university, pursuing a degree in education. I have a strong passion for working with young people and creating inclusive, engaging learning environments that support all students to reach their potential. Through my studies, Ive developed an interest in behaviour management, student wellbeing, and designing meaningful, real world learning experiences. 
-        <p style="font-size: large;"> Throughout my university journey, Ive gained valuable experience through professional placements in diverse school settings. These placements have helped me apply theory to practice, reflect critically on my teaching, and develop my confidence in the classroom. Im committed to continuous learning and look forward to making a positive contribution to the education sector. </p>
-<!-- Add further information here. This is only basic. -->
-</body >
-    <img src="images/profilepicture.jpg" alt="My Profile Picture" width="300px">
-<!-- Fix picture placement - put beside text -->
-
- <section>
-        <h2>My University Course</h2>
-        <p>When I complete my course at ACU, I will graduate with 2 majors and 2 minors. My choice for these is outlined in the table below:</p>
-        <table>
-          <style>
-            table, th, td {border:4px solid #FFD230;}
-          </style>
+      <h2>My University Course</h2>
+      <p>When I complete my course at ACU, I will graduate with 2 majors and 2 minors. My choice for these is outlined in the table below:</p>
+      <table>
+        <thead>
           <tr>
             <th>Majors:</th>
             <th>Minors:</th>
           </tr>
+        </thead>
+        <tbody>
           <tr>
             <td>Design & Technology</td>
             <td>Textiles</td>
@@ -57,11 +67,16 @@
             <td>Industrial Technology</td>
             <td>Computing</td>
           </tr>
-        </table>
-        </section>
+        </tbody>
+      </table>
+    </section>
+  </main>
 
 <!-- Footer -->
-    <footer style="font-family: Georgia; font-size: 14px; margin-top: 50px;">Kiera Walkerden – Teaching Portfolio – 2025
-        <p style="font-family: Georgia;"><a href="contact.html">Contact Me</a></p>
+    <footer>
+        <div class="container" style="justify-content: center;">
+            <p>Kiera Walkerden – Teaching Portfolio – 2025</p>
+        </div>
     </footer>
+</body>
 </html>
