--- a/teachingphilosophy.html
+++ b/teachingphilosophy.html
@@ -3,38 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Teaching Philosophy</title>
-<body>
-<!-- Page Header with nav links-->
-  <header>
-    <body style="background-color: #FFF9BF; font-family: Georgia;">
-    <h1 style="color:black; font-family: Georgia; text-align: center;">My Teaching Philosophy</h1>
-    <nav>
-      <nav style="display: flex; align-items: center; gap: 10px;">
-      <a href="index.html">Home</a>
-<!-- Put different flower image in between each link -->
-      <img src="images/flower1.jpg" alt="Flower image Spacer" width="18px">
-      <a href="about.html">About Me</a>
-      <img src="images/flower2.jpg" alt="Flower image Spacer" width="18px">
-      <a href="teachingphilosophy.html">Teaching Philosophy</a>
-      <img src="images/flower3.jpg" alt="Flower image Spacer" width="18px">
-      <a href="worksamples.html">Unit Plans and Resource Samples</a>
-      <img src="images/flower4.jpg" alt="Flower image Spacer" width="18px">
-      <a href="projects.html">University Projects</a>
-    </nav>
-  </header>
+    <title>Kiera Walkerden's Teaching Portfolio - Teaching Philosophy</title>
+    <link rel="stylesheet" href="starter.css">
 </head>
+<body>
 
-<main style="background-color: #FFF9BF; font-family: Georgia; margin-top: 20px;">
-    <img src="images/banner2.jpg" alt="Teaching Quote Banner" style="width: 100%; height: auto;">
+<!-- Website title -->
+    <header>
+        <h1 class="site-title">My Teaching Philosophy</h1>
+    </header>
 
-    <h3 style="color:black; font-family: Georgia;">State Syllabus</h3>
-    <p style="font-family: Georgia;">My teaching follows the NSW Education Authority Standards syllabus as linked below.</p>
-     <a href="https://educationstandards.nsw.edu.au/wps/portal/nesa/k-10/learning-areas/tas/design-and-technology-2019">NSW Design and Technology Syllabus</a>
-<!-- Change link to something more aligned with my teaching philosophy -->
-   
+<!-- Navigation Menu with different flower spacers between each picture -->
+    <nav>
+    <div class="container">
+        <img src="images/flower2.png" alt="Flower spacer" class="nav-spacer">
+        <a href="index.html">Home</a>
+        <img src="images/flower3.png" alt="Flower spacer" class="nav-spacer">
+        <a href="about.html">About Me</a>
+        <img src="images/flower2.png" alt="Flower spacer" class="nav-spacer">
+        <a href="teachingphilosophy.html" class="active">Teaching Philosophy</a>
+        <img src="images/flower3.png" alt="Flower spacer" class="nav-spacer">
+        <a href="worksamples.html">Unit Plans and Resource Samples</a>
+        <img src="images/flower2.png" alt="Flower spacer" class="nav-spacer">
+        <a href="projects.html">University Projects</a>
+        <img src="images/flower3.png" alt="Flower spacer" class="nav-spacer">
+        <a href="contact.html">Contact Me</a>
+    </div>
+    </nav>
+
+<!-- Page Banner -->
+    <img src="images/banner2.jpg" alt="Teaching Quote Banner" style="width: 100%; height: 100%; max-height: 500px; margin-top: 40px;">
+
+    <!-- Main Content Area -->
+    <main>
+        <section>
+            <h2>State Syllabus</h2>
+            <p>My teaching follows the NSW Education Authority Standards syllabus as linked below.</p>
+            <p><a href="https://educationstandards.nsw.edu.au/wps/portal/nesa/k-10/learning-areas/tas/design-and-technology-2019">NSW Design and Technology Syllabus</a></p>
+        <!-- Change link to something more aligned with my teaching philosophy -->
+        </section>
+    </main>
+
 <!-- Footer -->
-    <footer style="font-family: Georgia; font-size: 14px; margin-top: 50px;">Kiera Walkerden – Teaching Portfolio – 2025
-        <p style="font-family: Georgia;"><a href="contact.html">Contact Me</a></p>
+    <footer>
+        <div class="container" style="justify-content: center;">
+            <p>Kiera Walkerden – Teaching Portfolio – 2025</p>
+        </div>
     </footer>
+</body>
 </html>
