--- a/teachingphilosophy.html
+++ b/teachingphilosophy.html
@@ -27,6 +27,8 @@
         <img src="images/flower2.png" alt="Flower spacer" class="nav-spacer">
         <a href="projects.html">University Projects</a>
         <img src="images/flower3.png" alt="Flower spacer" class="nav-spacer">
+        <a href="resume.html">Resume and Professional Profile</a>
+        <img src="images/flower2.png" alt="Flower spacer" class="nav-spacer">
         <a href="contact.html">Contact Me</a>
     </div>
     </nav>
@@ -37,10 +39,11 @@
     <!-- Main Content Area -->
     <main>
         <section>
-            <h2>State Syllabus</h2>
-            <p>My teaching follows the NSW Education Authority Standards syllabus as linked below.</p>
-            <p><a href="https://educationstandards.nsw.edu.au/wps/portal/nesa/k-10/learning-areas/tas/design-and-technology-2019">NSW Design and Technology Syllabus</a></p>
-        <!-- Change link to something more aligned with my teaching philosophy -->
+            <h2>What do I believe in the classroom?</h2>
+                <p>I believe that teaching is about more than imparting knowledge. It is about empowering students to become confident, creative, and capable individuals who see themselves as lifelong learners. As a future Design and Technology teacher, I am passionate about equipping students with the skills to innovate, solve problems, and think critically about the world around them.</p>
+                <p>My teaching philosophy is grounded in inclusivity, adaptability, and student centred learning. Every student brings unique strengths, experiences, and challenges to the classroom, and it is my responsibility to create a supportive environment where all learners feel valued and capable of success. My experience working as a Teacher’s Aide with students from diverse backgrounds has shown me the importance of tailoring instruction, using ICT and practical strategies to engage learners, and fostering both academic growth and social-emotional development.</p>
+                <p>I believe in the power of collaboration, with students, colleagues, and families, to build a learning community that encourages resilience, creativity, and achievement. I strive to be approachable, supportive, and reflective in my practice, modelling lifelong learning for my students. By combining high expectations with empathy and encouragement, I aim to nurture students who are not only prepared for academic success, but also for meaningful participation in their communities.</p>
+                <p>Ultimately, my teaching philosophy reflects a commitment to helping students discover their potential, pursue their passions, and grow into innovative thinkers who can thrive in a dynamic and ever-changing world.</p>
         </section>
     </main>
 
