--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,8 @@
         <img src="images/flower2.png" alt="Flower spacer" class="nav-spacer">
         <a href="projects.html" class="active">University Projects</a>
         <img src="images/flower3.png" alt="Flower spacer" class="nav-spacer">
+        <a href="resume.html">Resume and Professional Profile</a>
+        <img src="images/flower2.png" alt="Flower spacer" class="nav-spacer">
         <a href="contact.html">Contact Me</a>
     </div>
     </nav>
