Tutorial 5 work upload: contact.html
Changed the code for my contact form as per the week 5 tutorial instructions to use the backend service "FormSubmit.co" to assist in my contact form working. 
To do this all I had to do was change the form action from "mailto:kierawalkerden05@gmail.com" to "https://formsubmit.co/kierawalkerden05@gmail.com", and remove the enctype. I'm excited to see if this works!

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <div class="flex-container" style="align-items:center; gap:8px;"></div>
       <p>Alternatively, fill out the form below and I will get back to you:</p>
       
-      <form action="mailto:kierawalkerden05@gmail.com" method="post" enctype="text/plain">
+      <form action="https://formsubmit.co/kierawalkerden05@gmail.com" method="POST">
         <fieldset>
           <legend>Contact Form</legend>
 
